--- a/layouts/partials/forms/quoteit-quote-form.html
+++ b/layouts/partials/forms/quoteit-quote-form.html
@@ -15,4 +15,5 @@
         </select>
         <input type="submit" value="Get A Quote" class="get-a-quote w-button">
     </div>
+    <div class="quote-box-disclaimer">Insurance quoting provided by Quoteit</div>
 </form>
