--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
         <div class="header-content">
             <div class="div-block-3">
                 <a href="/" class="logo w-inline-block">
-                    <img src="{{ $.Site.Data.general_settings.website_settings.logo }}" title="Go Home" alt="Logo for InsuranceSmart insurance agency. We provide health insurance, life insurance, auto insurance, home insurance and more." />
+                    <img src="{{ $.Site.Params.cloudinary_url }}w_250,q_60,f_auto{{ $.Site.Data.general_settings.website_settings.logo }}" title="Go Home" alt="Logo for InsuranceSmart insurance agency. We provide health insurance, life insurance, auto insurance, home insurance and more." />
                 </a>
             </div>
             <nav class="nav-wrapper">
