--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/insurancesmart.css">
     <link rel="stylesheet" href="/css/is.css">
+    <link rel="icon" href="{{ $.Site.Params.cloudinary_url }}w_32,h_32,c_fit{{ $.Site.Data.general_settings.website_settings.favicon }}">
     <title>
     {{- block "title" . -}}
         {{- if .Params.seo.meta_title -}}
