--- a/layouts/products/list.html
+++ b/layouts/products/list.html
@@ -1,16 +1,17 @@
 {{ define "main" }}
 <section class="misc-page-banner _2" style="background-image:url({{$.Site.Params.Cloudinary_url }}w_1600,q_50,f_auto{{ .Params.Featured_image }})">
+    <div class="div-block-16"></div>
     <div class="container flex-center">
         <h1 class="misc-page-heading">{{ .Title }}</h1>
     </div>
 </section>
 <section class="main-content">
     <div class="container">
+        {{ if .Content }}
         <div class="div-block-27">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
-                Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean
-                faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            {{ .Content }}
         </div>
+        {{ end }}
         <div class="div-block-25">
             {{ range where $.Site.RegularPages "Section" "insurancecategories" }}
             <div class="div-block-29">
