--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -1237,9 +1237,10 @@ address {
   padding-top: 350px;
   background-image: -webkit-linear-gradient(90deg, hsla(0, 0%, 100%, .28), hsla(0, 0%, 100%, .73)), url('../images/couple-smiling.jpg');
   background-image: linear-gradient(0deg, hsla(0, 0%, 100%, .28), hsla(0, 0%, 100%, .73)), url('../images/couple-smiling.jpg');
-  background-position: 0px 0px, 50% 50%;
+  background-position: center;
+  position: relative;
   background-size: auto, cover;
-  background-repeat: repeat, no-repeat;
+  background-repeat: no-repeat;
   background-attachment: scroll, scroll;
   box-shadow: inset 0 -18px 22px -10px rgba(0, 0, 0, .3);
 }
