--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <section class="main-content">
-
+    <div class="container">
+        {{ .Content }}    
+    </div>
 </section> 
 {{ end }}
