--- a/layouts/partials/components/contact-component.html
+++ b/layouts/partials/components/contact-component.html
@@ -51,6 +51,7 @@
                         </div>
                         {{ end }}
                     </div>
+                    <div data-netlify-recaptcha="true"></div>
                     <input type="submit" data-wait="Please wait..." class="submit-button w-button">
                 </form>
             </div>
