add spacing under recaptcha

--- a/layouts/partials/components/contact-component.html
+++ b/layouts/partials/components/contact-component.html
@@ -51,7 +51,7 @@
                         </div>
                         {{ end }}
                     </div>
-                    <div data-netlify-recaptcha="true"></div>
+                    <div data-netlify-recaptcha="true" style="margin-bottom: 30px"></div>
                     <input type="submit" data-wait="Please wait..." class="submit-button w-button">
                 </form>
             </div>
