--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -31,9 +31,8 @@
         </div>
         <div class="copyright-bar">
             <div>Copyright 2018 InsuranceSmart LLC. &nbsp;|&nbsp;&nbsp;
-                <a href="https://modiimedia.com" class="modii-credit">Website by
-                    <strong>Modii&nbsp;Media</strong>
-                </a>
+                Website by
+                <a href="https://modiimedia.com" class="modii-credit"><strong>Modii</strong></a>
             </div>
         </div>
     </div>
