add form to homepage banner

--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -81,6 +81,115 @@ img {
   -ms-flex-direction: column;
 }
 
+.form-block.homepage {
+  margin: 0; 
+  background: white;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.35);
+  width: 100%;
+  max-width: 600px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.form-block > h1 {
+  margin-bottom: 2rem;
+}
+
+form > .control {
+  display: block;
+  position: relative;
+}
+
+form > .control.submit {
+  margin-top: 0px;
+}
+
+.submit-button.large {
+  padding: 1.2rem;
+  font-size: 1.8rem;
+}
+
+form > .control > .overlay-label {
+  top: -13px;
+  left: 10px;
+  background: white;
+  z-index: 10;
+  position: absolute;
+  display: inline-block;
+  padding: 0 10px;
+  color: #333333;
+}
+
+.form-block.homepage > form > .control > input.text-field {
+  margin-top: 0px;
+  border: 1px solid #333333;
+  padding: 20px 10px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.form-block.homepage > form > .control > .checkbox-field > input[type="checkbox"] {
+  display: none;
+}
+
+form > .control.checkbox {
+  border-radius: 10px;
+  padding-top: 15px;
+  margin: -10px;
+}
+
+.form-block.homepage > form > .control > .checkbox-field {
+  padding: 0;
+  margin: 0px 10px;
+}
+
+.form-block.homepage > form > .control > .checkbox-field > label {
+  /* border: 1px solid #333333; */
+  padding: 1rem 0;
+  border-radius: 10px;
+  border-bottom: 1px solid white;
+}
+
+.form-block.homepage > form > .control > .checkbox-field > input:checked + label {
+}
+
+input + label > span {
+  border-bottom: 1px solid white;
+}
+
+input:checked + label > span {
+  background: rgba(0, 128, 0, 0.15);
+  border-bottom: 1px solid green;
+}
+
+label  i {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  font-size: 1.5rem;
+}
+
+input + label > span > .fa-square {
+  display: inline-block
+}
+
+input + label > span > .fa-check {
+  display: none
+}
+
+input:checked + label > span > .fa-square {
+  display: none;
+}
+
+input:checked + label > span > .fa-check {
+  display: inline-block;
+  color: green;
+}
+
+.form-block.homepage > form > .control > input.text-field:focus {
+  border-radius: 10px;
+}
+
 @media (max-width: 767px) {
   .qt-modal-content > iframe {
     margin: 0;
