--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="/js/main.js" type="text/javascript"></script>
+{{- $main := resources.Get "js/main.js" -}}
+{{- $modal := resources.Get "js/modals.js" -}}
+{{- $jsBundle := slice $main $modal | resources.Concat "js/main.js" | resources.Minify }}
+<script src="{{ $jsBundle.RelPermalink }}" type="text/javascript"></script>
 <script>
 //make link target=_blank if the webpage URL is an external link
 var links = document.links;
