--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -74,3 +74,52 @@ html.no-scroll {
 .is-hidden {
     display: none!important;
 }
+
+.form-field.multi-input {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.form-field.multi-input > .control {
+    position: relative;
+    margin-right: 20px;
+}
+
+@media(max-width: 479px) {
+    .form-field.multi-input > .control {
+        width: 100%;
+    }
+}
+
+.section-label {
+    margin-bottom: 10px;
+    /* font-size: 20px; */
+    margin-left: 20px;
+    position: relative;
+    display: inline-block;
+}
+.section-label::before {
+    background: black;
+    display: block;
+    content:" ";
+    position: absolute;
+    width: 15px;
+    height: 1px;
+    top: 50%;
+    left: -20px;
+}
+.section-label::after {
+    background: black;
+    display: block;
+    content:" ";
+    position: absolute;
+    width: 50px;
+    height: 1px;
+    top: 50%;
+    left: 108%;
+    right: -25px;
+}
