add success page for form

--- a/assets/css/insurancesmart.css
+++ b/assets/css/insurancesmart.css
@@ -190,7 +190,39 @@ input:checked + label > span > .fa-check {
   border-radius: 10px;
 }
 
+.success-banner {
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+  font-size: 1.5rem;
+  line-height: 120%;
+  display: flex;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
+  text-align: center;
+  padding: 2rem;
+  min-height: 300px;
+  background: white;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(150deg, rgba(33,33,33,0.7), rgba(33,33,33,0.7)), url(/images/woman-smiling-and-celebrating-on-the-beach-wearing-sunglasses.jpg)
+}
+
+.success-banner .content {
+  width: 100%;
+}
+
 @media (max-width: 767px) {
+  .success-banner {
+    margin-top: 0px;
+  }
   .qt-modal-content > iframe {
     margin: 0;
     padding-top: 30px;
