--- a/layouts/partials/quote-modal.html
+++ b/layouts/partials/quote-modal.html
@@ -4,7 +4,7 @@
         <h2 style="margin-top: 0;">You Are Almost Done</h2>
         <p>You can submit now or fill out some additional information so that we can better help you.</p>
         <div class="form-block homepage modal-form">
-            <form method="POST" data-netlify="true" name="contact-form" netlify-honeypot="date">
+            <form method="POST" data-netlify="true" name="contact-form" netlify-honeypot="date" action="/success">
                 <div class="control submit" style="margin-bottom: 50px; display: flex; display: -ms-flexbox; display: -webkit-flex; align-items: flex-end; flex-wrap: wrap; -ms-flex-wrap: wrap;">
                     <button class="submit-button large" type="submit" style="margin-right: 10px">Submit Now</button>
                     <div class="button cancel cfm_closer" style="margin-top: 10px">Cancel</div>
