--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,14 +19,38 @@
                 {{ partial "footer-nav.html" . }}
             </div>
             <div class="footer-column">
-                <div class="footer-mailing-list">Join Our Mailing List</div>
+                <!-- Begin Mailchimp Signup Form -->
+                <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
+                <div id="mc_embed_signup">
+                <form action="https://getinsurancesmart.us20.list-manage.com/subscribe/post?u=ce94cdd7d3aa0cb9144f23eb5&amp;id=f9a4c5bcbe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                    <h2 class="footer-mailing-list">Join Our Mailing List</h2>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL" class="w-hidden">Email Address</label>
+                    <input type="email" value="" name="EMAIL" class="text-field w-input required email" id="mce-EMAIL" placeholder="Enter Your Email">
+                </div>
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ce94cdd7d3aa0cb9144f23eb5_f9a4c5bcbe" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="submit-button w-button"></div>
+                    </div>
+                </form>
+                </div>
+                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BDAY';ftypes[5]='date';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
+                
+                <!-- Original form -->
+                <!-- <div class="footer-mailing-list">Join Our Mailing List</div>
                 <div>
                     <form id="email-form">
-                        <input type="text" class="text-field w-input" maxlength="256" name="mcEmail" placeholder="Enter your email"
+                        <input type="email" class="text-field w-input" maxlength="256" name="mcEmail" placeholder="Enter your email"
                             id="mcEmail" required>
+                        <input type="text" class="text-field w-input" name="mcFName" id="mcFName" placeholder="Enter your first name">
                         <input type="submit" class="submit-button w-button">
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="copyright-bar">
